--- a/Ang-GACD-UI/package.json
+++ b/Ang-GACD-UI/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.3",
-    "@angular/common": "~12.0.3",
+    "@angular/common": "^12.0.3",
     "@angular/compiler": "~12.0.3",
     "@angular/core": "~12.0.3",
     "@angular/forms": "~12.0.3",
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "@auth0/auth0-angular": "^1.5.1",
+    "bootstrap": "^5.0.1",
     "json-server": "^0.16.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
