--- a/Ang-GACD-UI/tsconfig.json
+++ b/Ang-GACD-UI/tsconfig.json
@@ -21,7 +21,8 @@
       "dom"
     ],
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "strictNullChecks": false 
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
