--- a/Ang-GACD-UI/auth_config.json
+++ b/Ang-GACD-UI/auth_config.json
@@ -1,4 +1,6 @@
 {
     "domain": "kwikkoder.us.auth0.com",
-    "clientId": "iBxsoqRqsle5xBb11I9SGOtUtNvBCX6s"
+    "clientId": "iBxsoqRqsle5xBb11I9SGOtUtNvBCX6s",
+    "audience": "http://kwickkoderrest.azurewebsites.net/",
+    "serverUrl": "http://kwickkoderrest.azurewebsites.net/"
 }
