--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,34 +1,23 @@
-# Starter pipeline
-- task: NodeTool@0
-  inputs:
-    versionSpec: '6.x'
-    checkLatest: true
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-- task: Npm@1
-  inputs:
-    command: 'install'
-    workingDir: 'Ang-GACD-UI'
-- task: Npm@1
-  inputs:
-    command: 'publish'
-    workingDir: '/Ang-GACD-UI'
-    publishRegistry: 'useFeed'
-    publishFeed: '2e9c78f3-fa36-4a27-a3da-e7e0f42282d5'
+# Node.js with Angular
+# Build a Node.js project that uses Angular.
+# Add steps that analyze code, save build artifacts, deploy, and more:
+# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-- task: Npm@1
-  inputs:
-    command: 'custom'
-    workingDir: 'Ang-GACD-UI'
-    customCommand: 'install @angular-cli'
 - main
-- task: Npm@1
-  inputs:
-    command: 'custom'
-    workingDir: 'Ang-GACD-UI'
-    customCommand: 'run build'
+
 pool:
   vmImage: ubuntu-latest
+
+steps:
+- task: NodeTool@0
+  inputs:
+    versionSpec: '14.x'
+  displayName: 'Install Node.js'
+
+- script: |
+    npm install -g @angular/cli
+    npm install
+    ng build --prod
+  displayName: 'npm install and build'
 
