Set prod = true

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,6 @@ steps:
     npm install -g @angular/cli
     cd Ang-GACD-UI
     npm install
-    ng build --prod
+    ng build --prod="true"
   displayName: 'npm install and build'
 
