fixed some stuff

--- a/.gitignore
+++ b/.gitignore
@@ -816,3 +816,4 @@ _Pvt_Extensions
 # End of https://www.toptal.com/developers/gitignore/api/angular,csharp,visualstudio,visualstudiocode
 GACDAngular/appsettings.json
 GACDAngular/appsettings.json
+/Ang-GACD-UI/src/app/components/SoloAssessment/SoloAssessment.component.html
