--- a/Ang-GACD-UI/package.json
+++ b/Ang-GACD-UI/package.json
@@ -24,11 +24,11 @@
     "bootstrap": "^5.0.1",
     "json-server": "^0.16.3",
     "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
+    "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.3",
+    "@angular-devkit/build-angular": "^0.1102.14",
     "@angular/cli": "~12.0.3",
     "@angular/compiler-cli": "~12.0.3",
     "@types/jasmine": "~3.6.0",
