--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,8 +20,9 @@ steps:
     cd Ang-GACD-UI
     npm install
     ng build --prod="true"
+    cd dist
     ls
-    zip -r dist/app.zip dist/app
+    zip -r app.zip app
   displayName: 'npm install and build'
 
 #Test
