--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,4 +34,5 @@ steps:
     WebAppName: 'kwikkoder'
     packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
     RuntimeStack: 'NODE|14-lts'
+    StartupCommand: 'pm2 serve /home/site/wwwroot/ --no-daemon --spa'
 
