Changed rest api to https

--- a/Ang-GACD-UI/auth_config.json
+++ b/Ang-GACD-UI/auth_config.json
@@ -2,5 +2,5 @@
     "domain": "kwikkoder.us.auth0.com",
     "clientId": "iBxsoqRqsle5xBb11I9SGOtUtNvBCX6s",
     "audience": "http://kwickkoderrest.azurewebsites.net/",
-    "serverUrl": "http://kwickkoderrest.azurewebsites.net/"
+    "serverUrl": "https://kwickkoderrest.azurewebsites.net/"
 }
