--- a/Ang-GACD-UI/package.json
+++ b/Ang-GACD-UI/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.3",
-    "@angular/common": "^12.0.3",
+    "@angular/common": "^12.0.4",
     "@angular/compiler": "~12.0.3",
     "@angular/core": "~12.0.3",
     "@angular/forms": "~12.0.3",
@@ -21,8 +21,11 @@
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
     "@auth0/auth0-angular": "^1.5.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.2",
     "bootstrap": "^5.0.1",
+    "jquery": "^3.6.0",
     "json-server": "^0.16.3",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
