--- a/Ang-GACD-UI/tsconfig.json
+++ b/Ang-GACD-UI/tsconfig.json
@@ -22,7 +22,8 @@
     ],
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "strictNullChecks": false 
+    "strictNullChecks": false,
+    "noImplicitAny": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
