--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,9 +26,7 @@ steps:
 #Test
 - script: |
     cd Ang-GACD-UI
-    which chromium
-    which chrome
-    ls
+    export CHROME_BIN=/snap/bin/chromium
     npx ng test --browsers ChromeHeadless --watch=false --karmaConfig karma.conf.js --code-coverage
 
   displayName: "Running Tests"
