--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ steps:
     cd Ang-GACD-UI
     which chrome
     export CHROME_BIN=$(which chrome)
-    echo CHROME_BIN
+    echo $CHROME_BIN
     npx ng test --browsers ChromeHeadless --watch=false --karmaConfig karma.conf.js --code-coverage
 
   displayName: "Running Tests"
