Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,8 +26,7 @@ steps:
 #Test
 - script: |
     cd Ang-GACD-UI
-    which google-chrome
-    export CHROME_BIN=$(which google-chrome)
+    export CHROME_BIN=/usr/bin/google-chrome
     echo $CHROME_BIN
     npx ng test --browsers ChromeHeadless --watch=false --karmaConfig karma.conf.js --code-coverage
 
