--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,8 @@ steps:
 #Test
 - script: |
     cd Ang-GACD-UI
-    export CHROME_BIN=/usr/bin/google-chrome
+    which google-chrome
+    export CHROME_BIN=$(which google-chrome)
     echo $CHROME_BIN
     npx ng test --browsers ChromeHeadless --watch=false --karmaConfig karma.conf.js --code-coverage
 
