--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,21 @@ steps:
     versionSpec: '14.x'
   displayName: 'Install Node.js'
 
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'sonar-cloud-kwik'
+    organization: '210503-reston-net'
+    scannerMode: 'MSBuild'
+    projectKey: '210503-Reston-NET_GACD-P2-UI'
+    projectName: 'GACD-P2-UI'
+    extraProperties: |
+      sonar.sourceEncoding=UTF-8
+      sonar.exclusions=**/mode_modules/**,**/*.spec.ts
+      sonar.tests=src
+      sonar.test.inclusions=**/*spec.ts
+      sonar.typescript.lcov.reportPaths=${Build.SourcesDirectory)/**/coverage/lcov.info
+      sonar.typescript.exclusions=**/node_modules/**,**/typings.d.ts,**/main.ts,**/environments/environment*.ts, **/*routing.module.ts
+
 #Build
 - script: |
     npm install -g @angular/cli
@@ -32,6 +47,15 @@ steps:
   
   displayName: "Running Tests"
   continueOnError: True
+  
+- script: |
+     cd Ang-GACD-UI
+     npm run sonar
+
+- task: PublishCodeCoverageResults@1
+  inputs:
+    codeCoverageTool: 'Cobertura'
+    summaryFileLocation: '$(System.DefaultWorkingDirectory)/Ang-GACD-UI/coverage/Ang-GACD-UI/cobertura.txt'
 
 #Deploy
 - task: AzureRmWebAppDeployment@4
