--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,11 +23,12 @@ steps:
     projectName: 'GACD-P2-UI'
     extraProperties: |
       sonar.sourceEncoding=UTF-8
-      sonar.exclusions=**/mode_modules/**,**/*.spec.ts
+      sonar.sources=src
+      sonar.exclusions=**/node_modules/**,**/assets/**,**/*.spec.ts
       sonar.tests=src
-      sonar.test.inclusions=**/*spec.ts
-      sonar.typescript.lcov.reportPaths='$(System.DefaultWorkingDirectory)/Ang-GACD-UI/coverage/Ang-GACD-UI/lcov.info'
-      sonar.typescript.exclusions=**/node_modules/**,**/typings.d.ts,**/main.ts,**/environments/environment*.ts, **/*routing.module.ts
+      sonar.test.inclusions=**/*.spec.ts
+      sonar.ts.tslintconfigpath=tslint.json
+      sonar.javascript.lcov.reportPaths=coverage/Ang-GACD-UI/lcov.info
 
 #Build
 - script: |
@@ -57,8 +58,7 @@ steps:
 - task: PublishCodeCoverageResults@1
   inputs:
     codeCoverageTool: 'Cobertura'
-    summaryFileLocation: '$(System.DefaultWorkingDirectory)/Ang-GACD-UI/coverage/Ang-GACD-UI/lcov.info'
-    reportDirectory: '**/coverage/Ang-GACD-UI/'
+    summaryFileLocation: '$(System.DefaultWorkingDirectory)/Ang-GACD-UI/coverage/Ang-GACD-UI/cobertura.txt'
 #Deploy
 - task: AzureRmWebAppDeployment@4
   inputs:
